head:

0.6.2:

- Apparently need to use custom __method__ in Ruby versions right up to 1.8.7.

0.6.1:

- Use custom __method__ in Ruby versions *prior* to 1.8.7 not *up to* 1.8.7.

- Rename Kernel#memoize to Kernel#expirable_memoize so that it doesn't conflict with memoize method in ActiveSupport which has an entirely different API and semantics. Reported by [Florian Dütsc (mail@florian-duetsch.de)].

0.6.0:

- Full 1.9 compatibility (all tests passing against 1.9 & 1.8.6). Thanks to [David (dvdplm@gmail.com), Cyril David (cyx.ucron@gmail.com)]

0.5.1:

- For now just redefine __method__ to take arguments so we don't break 1.8.7 use today

0.5.0:

- Bug #17458 fixed. Normalize the :expires_in option to always be an integer even if the actual object passed in is a proxy to an integer, such as is the case with 2.hours from ActiveSupport which is actually an instance of ActiveSupport::Duration. Reported by [Steve Kickert steve@riverocktech.com]

- Bug #19158 fixed. Don't prepend leading slash onto bucket name when deleting a bucket with the :force => true option.

- Bug #17628 fixed. Don't ignore :use_ssl => false in url_for when the connection is established over ssl. Reported by [Tom Fixed (tkat11)]

- Bug #13052 fixed. Appease some proxies by always including a Content-Length with all requests. Reported by [James Murty (jmurty)]

- Bug #13756 fixed. Attributes that are false should not raise NoMethodError in Base#method_missing. Fixed by [Scott Patten]

- Bug #19189 fixed. No longer reference Date::ABBR_MONTHS constant which was removed in Ruby 1.8.6. Reported by [Khurram Virani (kvirani)]

- Bug #20487 fixed. If a request fails and is retried, only escape the request path the first time. Reported by [anonymous]

- Replace ad-hoc S3Object.copy method with newly support built in API call.

- Do not make connections persistent by default. This "feature" causes far more broken pipes than it is worth. Use with caution.

0.4.0:
